@@ -3,13 +3,13 @@
 --CSS--
 @font-face {
 	font-family: "Unibody8SmallCaps Regular";
-	src:url('fonts/unibody_8-smallcaps-webfont.woff') format('woff');
+	src:url('fonts/unibody_8-smallcaps-webfont.woff') format('woff'), url(fonts/unibody_8-smallcaps-webfont.ttf) format('truetype');
 }
 --EXPECT--
 array (
   '@font-face' =>
   array (
 		'font-family' => '"Unibody8SmallCaps Regular"',
-		'src' => 'url(fonts/unibody_8-smallcaps-webfont.woff) format("woff")',
+		'src' => 'url(fonts/unibody_8-smallcaps-webfont.woff) format("woff"),url(fonts/unibody_8-smallcaps-webfont.ttf) format("truetype")',
   ),
 )
